# Halfling

./: .gitignore  Color.h  LICENSE  Layer.h  Makefile  README.md  SDL.cpp  configure.ac
examples/: Makefile.am  hello.cpp  logo.cpp  sublayer.cpp
src/: Color.h  Console.cpp  Console.h  Console.lo  Fontmap.cpp  Fontmap.h  Layer.cpp  Layer.h  Layer.lo  Main.cpp  Makefile.am  SDL.cpp  SDL.h  SDL.lo  Util.h  libhalfling.la
