AM_CXXFLAGS = -Wall -std=c++11
AM_LDFLAGS = -lSDL2 lSDL2_image

lib_LTLIBRARIES = libhalfling.la
libhalfling_la_SOURCES = Console.h Console.cpp Layer.h Layer.cpp SDL.h \
		 	  	         SDL.cpp Color.h Util.h Fontmap.h \
						 Fontmap.cpp 
pkginclude_HEADERS = Console.h Layer.h Fontmap.h SDL.h Color.h Util.h
